<resources>
    <string name="app_name">Cuntada</string>
    <string name="action_settings">Add Recipe</string>
    <string name="button_login"><b>Login</b></string>
    <string name="create_account"><b>Create Account</b></string>
    <string name="button_register"><b>Register</b></string>
    <string name="button_save">Details</string>
    <string name="privateDetails">Private Details</string>
    <string name="forum">Forum</string>
    <string name="recipes">Recipes</string>
    <string name="SignUp">SignUp</string>
    <string name="target_weight">Target Weight</string>
    <string name="body_weight">Body weight</string>
    <string name="bmi_title"><b>BMI</b></string>
    <string name="log_out">LOG OUT</string>
    <string name="sign_up">Sign Up</string>
    <string name="slogen">Healthy Lifestyle App</string>
    <string name="not_have_account">Do not have an account ? </string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="line">-------------------------------------------------</string>
    <string name="new_recipe">Add wew Recipe</string>
    <string name="name"><b>Name:   </b></string>
    <string name="category"><b>Category:    </b></string>
    <string name="edit_profile_photo_change">Change Profile Photo</string>
    <string name="exit_popup_txt">Would you like to exit?</string>
    <string name="my_recipes">My Recipes</string>
    <string name="ingredients_title"><b>Ingredients :</b></string>
    <string name="preparation_title">Preparation :</string>
    <string name="button_save_recipe">save :</string>
    <string name="recipes_name">Recipes name :</string>
    <string name="first_name"><b>First Name :</b></string>
    <string name="last_name"><b>Last Name :</b></string>
    <string name="email"><b>E-mail :</b></string>
    <string name="password"><b>Password : </b></string>
    <string name="confirm_pass"><b>Confirm Password : </b>></string>
    <string name="register_title"><b>Sign Up</b></string>
    <string name="weight"><b>Weight :</b></string>
    <string name="height"><b>Height :</b></string>
    <string name="gender"><b>Gender : </b></string>
    <string name="ingredient"><b>Ingredient :</b></string>
    <string name="instruction"><b>Instruction :</b></string>
    <string name="preparation">Preparation :</string>
    <string name="main_container">main_container :</string>
    <string name="addRecipeItem">add recipe</string>
    <string name="list1">list1 :</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="category_prompt">Choose a category</string>
    <string name="details_title">My Details</string>
    <string name="recipes1">Recipes</string>
    <string name="add_pic">Add Picture</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save_details">Save Details</string>
    <string name="cal_bmi">Calculate BMI</string>
    <string name="text_view">TextView</string>
    <string name="cal">Calculate</string>
    <string name="delete">Delete Recipe</string>
    <string name="save">SAVE</string>





    <string-array name="recipe_category">
    <item>Vegan</item>
    <item>Gluten free</item>
    <item>Kosher</item>
    </string-array>

</resources>
