<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fontFamily="serif">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:fontFamily="serif"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="serif"
        android:hint="Recipe name"
        android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:fontFamily="serif"
            android:text="@string/category"/>
    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textSize="25sp"
        android:entries="@array/recipe_category"
        android:prompt="@string/category_prompt">
    </Spinner>
    </LinearLayout>

    <EditText
        android:id="@+id/ingredientsEditText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/lastNameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="serif"
        android:hint="Recipe ingredients"
        android:textSize="25sp" android:paddingLeft="5dp"
        android:maxHeight="35dp"
        android:scrollbars="vertical" />

    <EditText
        android:id="@+id/instructionsEditText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="serif"
        android:hint="Recipe instructions "
        android:textSize="25sp" android:paddingLeft="5dp"
        android:maxHeight="35dp"
        android:scrollbars="vertical" />
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:background="@drawable/no_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/editPictureButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_background"
            android:fontFamily="serif"
            android:text="Add Picture" />

    </LinearLayout>
    <Button
        android:id="@+id/addRecipeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:fontFamily="serif"
        android:text="SAVE"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="379dp" />

</LinearLayout>